feat/user models (#13)
* docs: documents related to erd, feat: adding user table

* feat: user tokens table

* feat: organizer models, and ci update

* tests: created test to check user model(create,read,update)

* feat: add dependencies, add /users/me
tests: add as_user client and tests related to user endpoint
